--- a/css/app.css
+++ b/css/app.css
@@ -8,19 +8,28 @@
   color: #f00;
   font-weight: 700;
 }
+.pressStart {
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
 body {
-  font-size: 1.6em;
+  font-size: 1.5em;
   background: #444;
   color: #fff;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
 }
 header {
   width: 100%;
   height: 600px;
-  background: linear-gradient(#fff, #999 );
+  background: url('../assets/images/headerBkg.jpg');
+  background-position-y: -575px;
   text-align: center;
   padding-top: 200px;
   font-size: 2em;
   text-shadow: 3px 3px 7px #777;
+  border-bottom: 1px solid #000;
 }
 #about {
   width: 100%;
@@ -30,9 +39,23 @@ header {
     width: 50%;
     height: 900px;
     padding: 25px 50px;
+    padding-top: 50px;
     float: left;
-    background: #00f;
+    background: linear-gradient(#777, #555);
+    font-size: 1.3em;
   }
+    #aboutLeft > p {
+      margin: 20px 0;
+    }
+    #bioPic {
+      width: 350px;
+      border-radius: 50%;
+      border: 4px solid #222;
+      box-shadow: 3px 3px 7px #111;
+      float: left;
+      margin-right: 67px;
+      margin-bottom: 50px;
+    }
   #aboutRight {
     width: 50%;
     height: 900px;
