--- a/css/app.css
+++ b/css/app.css
@@ -13,6 +13,38 @@
   font-weight: 400;
   font-style: normal;
 }
+.skillset {
+  display: block;
+  width: 100%;
+  height: 350px;
+}
+.skill {
+  float: left;
+  min-width: 200px;
+  height: 200px;
+  background: #444;
+  border-radius: 16px;
+  border: 3px solid #222;
+  box-shadow: 3px 3px 7px #111;
+  text-align: center;
+  padding: 10px;
+  margin: 0 21px;
+  cursor: pointer;
+}
+.title {
+  padding: 10px 0;
+  margin: 25px 0;
+  background: #333;
+  border-radius: 8px;
+  border: 2px solid #111;
+  font-size: 1.6em;
+}
+.icon {
+  width: 64px;
+  margin: 10px;
+  padding-bottom: 7px;
+  border-bottom: 1px solid #000;
+}
 body {
   font-size: 1.5em;
   background: #444;
@@ -61,13 +93,15 @@ header {
     height: 900px;
     padding: 25px 50px;
     float: left;
-    background: #f00;
+    background: linear-gradient(#ccc, #999);
+    text-align: center;
   }
 footer {
   width: 100%;
   height: 100px;
   text-align: center;
   padding-top: 18px;
-  background: #000;
+  background: linear-gradient(to right, #4CA1AF, #2C3E50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   font-size: .9em;
+  border-top: 1px solid #000;
 }
